# doccer

./: .gitignore  BUG_REPORT.md  BUG_REPORT_build_logs.txt  BUG_REPORT_doccer_error.txt  BUG_REPORT_json_snippet.txt  BUG_REPORT_rustdoc_json.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  test_json_parsing.rs  test_prefix.json
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/parser/: parser.rs  types.rs
src/renderer/: components.rs  mod.rs  renderer.rs  renders.rs  traits.rs
src/tests/: mod.rs
tests/: basic_types.json  basic_types.txt  complex.json  integration_tests.rs  lib.rs  modules_output.txt  snapshots.rs
tests/expected/: basic_types.txt  complex.txt  deprecation.txt  generics.txt  modules.txt
tests/fixtures/advanced_errors/: Cargo.toml
tests/fixtures/async_await/: Cargo.toml
tests/fixtures/attributes/: Cargo.toml
tests/fixtures/basic_types/: Cargo.toml
tests/fixtures/complex/: Cargo.toml
tests/fixtures/deprecation/: Cargo.toml
tests/snapshots/: integration_tests__advanced_errors_fixture.snap  integration_tests__async_await_fixture.snap  integration_tests__attributes_fixture.snap  integration_tests__basic_types_fixture.snap  integration_tests__complex_fixture.snap  integration_tests__deprecation_fixture.snap  integration_tests__generics_fixture.snap  integration_tests__modules_fixture.snap  integration_tests__trait_objects_fixture.snap
tests/unit/: mod.rs  parser_error_handling_tests.rs  test_error_handling.rs  test_generics.rs  test_network.rs  test_rendering.rs  test_type_rendering.rs
(+12 files in other folders)
