[package]
name = "doccer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zstd = "0.12"

[dev-dependencies]
tempfile = "3.10.0"
